Prevents overlay content from being able to overlap the close button
Fixes: OX-9715

--- a/src/main/resources/default/assets/common/styles/overlay.scss
+++ b/src/main/resources/default/assets/common/styles/overlay.scss
@@ -36,6 +36,7 @@
       height: 32px;
       right: 2px;
       top: 2px;
+      z-index: 1;
 
       .sci-overlay-button {
         display: block;
